data/forge_javadoc/1.9.4/processed/net_minecraft_entity_monster_EntityWitch.md
# EntityWitch

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.monster.EntityMob → net.minecraft.entity.monster.EntityWitch

## Class signature

```java
public class EntityWitch extends EntityMob implements IRangedAttackMob
```

## Methods

- `protected void applyEntityAttributes()`
- `protected float applyPotionDamageCalculations(DamageSource source, float damage)`
- `void attackEntityWithRangedAttack(EntityLivingBase target, float p_82196_2_)`
- `protected void entityInit()`
- `protected SoundEvent getAmbientSound()`
- `protected SoundEvent getDeathSound()`
- `float getEyeHeight()`
- `protected SoundEvent getHurtSound()`
- `protected ResourceLocation getLootTable()`
- `void handleStatusUpdate(byte id)`
- `protected void initEntityAI()`
- `boolean isDrinkingPotion()`
- `void onLivingUpdate()`
- `void setAggressive(boolean aggressive)`

## Fields

- `EntityWitch`