data/forge_javadoc/1.12.2/processed/net_minecraft_entity_monster_EntityWitch.md
# EntityWitch

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.monster.EntityMob → net.minecraft.entity.monster.EntityWitch

## Class signature

```java
public class EntityWitch extends EntityMob implements IRangedAttackMob
```

## Methods

- `protected void applyEntityAttributes()`
- `protected float applyPotionDamageCalculations(DamageSource source, float damage)`
- `void attackEntityWithRangedAttack(EntityLivingBase target, float distanceFactor)`
- `protected void entityInit()`
- `protected SoundEvent getAmbientSound()`
- `protected SoundEvent getDeathSound()`
- `float getEyeHeight()`
- `protected SoundEvent getHurtSound(DamageSource damageSourceIn)`
- `protected ResourceLocation getLootTable()`
- `void handleStatusUpdate(byte id)`
- `protected void initEntityAI()`
- `boolean isDrinkingPotion()`
- `void onLivingUpdate()`
- `static void registerFixesWitch(DataFixer fixer)`
- `void setDrinkingPotion(boolean drinkingPotion)`
- `void setSwingingArms(boolean swingingArms)`

## Fields

- `EntityWitch`